src/PortfolixContainer/Home/Profile/Profile.css
.profile-container {
    display: flex;
    margin-top: 160px;
    align-items: center;
    text-align: center;
    justify-content: center;
    height: 10%;
    min-height: fit-content;
}

.profile-parent {
    display: flex;
    height: 500px;
    align-items: center;
    color: aliceblue;
}

.profile-details-name {
    font-size: 24px;
    font-family: "Poppins SemiBold";
}

.profile-details-role {
    display: flex;
    flex-direction: column;
    margin: 14px 0 24px 0;
}

.profile-details-role h1 {
    font-size: 40px;
    font-family: "Poppins Bold";
}

.primary-text {
    color: (--white);
}

.highlighted-text {
    color: var(--dark-orange);
}

.profile-role-tagline {
    font-size: 22px;
    font-family: 'Poppins Medium';
    margin: 6px 0 0 0;
    color: cornsilk;
}

.profile-options .highlighted-btn {
    margin: 0 0 0 28px;
}

.profile-options .highlighted-btn:hover {
    margin: 0 0 0 28px;
    background-color: cornsilk;
    color: black;
}

.profile-picture {
    display: flex;
    align-items: center;
    justify-content: center;
    box-shadow: -1.5px 1px 0px 0px var(--white);
    border-radius: 50%;
    height: 380px;
    width: 380px;
    margin: 0 0 0 144px;
}

.profile-picture-background {
    height: 80%;
    width: 80%;
    margin-top: 48px;
    background-image: url("../../../assets/Home/Hi.png");
    background-size: cover;
    border-radius: 50%;
    background-repeat: no-repeat;
    background-position: center;
    transform: scale(1);
    transition: .3s ease-in;
}

.profile-picture-background:hover {
    transform: scale(1.07);
    transition: .5s ease-out;
}

.colz .colz-icon i {
    color: white;
    padding: 4px;
}

.colz .colz-icon i:hover {
    transform: scale(1.3);
}

@media screen and (max-width: 1440px) {
    .profile-picture {
        margin: 0 0 0 80px;
    }

    .profile-details-name {
        font-size: 20px;
    }

    .profile-details-role .primary-text {
        font-size: 12px;
    }

    .profile-options .btn {
        width: 160px;
        padding: 12px 0;
        margin: 4px !important;
    }

    .profile-options .highlighted-btn {
        width: 160px;
        padding: 12px 0;
        margin: 4px !important;
    }
}

@media screen and (max-width: 1100px) {
    .profile-picture {
        margin: 0 0 0 80px;
    }

    .profile-details-name {
        font-size: 20px;
    }

    .profile-details-role .primary-text {
        font-size: 12px;
    }

    .profile-options .btn {
        width: 160px;
        padding: 12px 0;
        margin: 4px !important;
    }

    .profile-options .highlighted-btn {
        width: 160px;
        padding: 12px 0;
        margin: 4px !important;
    }
}

@media screen and (max-width: 910px) {
    .profile-picture {
        height: 320px;
        width: 320px;
        margin: 0 0 0 4px;
    }

    .profile-options .btn {
        width: 160px;
        padding: 12px 0;
        margin: 4px !important;
    }

    .profile-options .highlighted-btn {
        width: 160px;
        padding: 12px 0;
        margin: 4px !important;
    }
}

@media screen and (max-width: 810px) {
    .profile-picture {
        margin: 0 !important;
    }

    .profile-parent {
        flex-direction: column-reverse;
        margin: 40px 0 0 0;
    }

    .profile-options {
        display: flex;
        justify-content: center;
    }

    .profile-details {
        margin: 25px 0 0;
    }

    .profile-options .btn {
        width: 160px;
        padding: 12px 0;
        margin: 4px !important;
    }

    .profile-options .highlighted-btn {
        width: 160px;
        padding: 12px 0;
        margin: 4px !important;
    }

    .profile-options,
    .profile-details-role {
        text-align: center;
    }
}

@media screen and (max-width: 375px) {
    .profile-picture {
        height: 200px;
        width: 200px;
    }

    .profile-picture-background {
        height: 70%;
        width: 70%;
    }

    .profile-details {
        width: 90%;
    }

    .profile-options .btn {
        width: 140px;
        padding: 12px 0;
        margin: 4px !important;
    }

    .profile-options .highlighted-btn {
        width: 140px;
        padding: 12px 0;
        margin: 4px !important;
    }
}

